# tutorials

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  migration_guide.md
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/: setup.cfg
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/.openapi-generator/: FILES
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/src/openapi_server/: main.py  security_api.py
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/src/openapi_server/apis/: chat_api.py  completions_api.py  completions_api_base.py  models_api.py
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/src/openapi_server/models/: chat_completion_function_call_option.py  chat_completion_functions.py  chat_completion_message_tool_call.py  chat_completion_message_tool_call_chunk.py  chat_completion_message_tool_call_function.py  chat_completion_named_tool_choice.py  chat_completion_named_tool_choice_function.py  chat_completion_request_assistant_message.py  chat_completion_request_function_message.py  chat_completion_request_message.py  chat_completion_request_message_content_part.py  chat_completion_request_message_content_part_image.py  chat_completion_request_system_message.py  chat_completion_request_user_message.py  (+27 more)
Triton_Inference_Server_Python_API/examples/fastapi/openapi-generator/openai-server/tests/: conftest.py  test_chat_api.py  test_completions_api.py  test_models_api.py
(+459 files in other folders)
