[metadata]
name = openapi_server
version = 2.0.0
description = The OpenAI REST API. Please see https://platform.openai.com/docs/api-reference for more details.
long_description = file: README.md
keywords = OpenAPI OpenAI API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
